--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,7 @@
 <div class="container">
   <br /><br />
+  <h4>Search Page</h4>
+  <br />
   <div class="row">
     <div class="col-md-4">
       <input
@@ -30,11 +32,12 @@
         >
       </select>
     </div>
-    <!-- <div class="col-md-3">
-      <button class="btn btn-primary">Search Company</button>
-    </div> -->
   </div>
+
+
   <br /><br />
+  <h4>Search Results View</h4>
+  <br />
   <div class="row">
     <table class="table">
       <thead class="thead-dark">
